fix problems installing a clean system

--- a/roles/developer/tasks/gcloud.yml
+++ b/roles/developer/tasks/gcloud.yml
@@ -9,6 +9,7 @@
   environment:
   when: gcloud_check.rc == 0
   register: installed_gcloud_version
+  ignore_errors: yes
 
 - include: install-gcloud.yml
   when: gcloud_check.rc != 0 or installed_gcloud_version.stdout.find('Google Cloud SDK ' + gcloud_version) != 0
