--- a/roles/developer/defaults/main.yml
+++ b/roles/developer/defaults/main.yml
@@ -1,13 +1,13 @@
 ---
-golang_version: "1.17.3"
+golang_version: "1.18"
 golang_checksums:
   arm64:
-    Darwin: "sha256:ffe45ef267271b9681ca96ca9b0eb9b8598dd82f7bb95b27af3eef2461dc3d2c"
-    Linux: "sha256:06f505c8d27203f78706ad04e47050b49092f1b06dc9ac4fbee4f0e4d015c8d4"
+    Darwin: "sha256:9cab6123af9ffade905525d79fc9ee76651e716c85f1f215872b5f2976782480"
+    Linux: "sha256:7ac7b396a691e588c5fb57687759e6c4db84a2a3bbebb0765f4b38e5b1c5b00e"
   x86_64:
-    Darwin: "sha256:765c021e372a87ce0bc58d3670ab143008dae9305a79e9fa83440425529bb636"
-    Linux: "sha256:550f9845451c0c94be679faf116291e7807a8d78b43149f9506c1b15eb89008c"
-golang_pkg: "go{{ golang_version }}.{{ ansible_system | lower }}-{{ ansible_architecture }}.tar.gz"
+    Darwin: "sha256:70bb4a066997535e346c8bfa3e0dfe250d61100b17ccc5676274642447834969"
+    Linux: "sha256:e85278e98f57cdb150fe8409e6e5df5343ecb13cebf03a5d5ff12bd55a80264f"
+golang_pkg: "go{{ golang_version }}.{{ ansible_system | lower }}-{{ pkg_arch }}.tar.gz"
 protoc_version: "3.15.6"
 protoc_os: "{{ ansible_system | lower }}"
 protoc_pkg:
