--- a/roles/developer/tasks/install-go.yml
+++ b/roles/developer/tasks/install-go.yml
@@ -1,7 +1,7 @@
 ---
 - name: download go{{ golang_version }} archive
   get_url:
-    url: https://storage.googleapis.com/golang/{{ golang_pkg }}
+    url: https://go.dev/dl/{{ golang_pkg }}
     checksum: "{{ golang_checksums[ansible_architecture][ansible_system] }}"
     dest: /tmp/{{ golang_pkg }}
     timeout: 600
