--- a/roles/developer/tasks/golang.yml
+++ b/roles/developer/tasks/golang.yml
@@ -13,5 +13,5 @@
   when: golang_check.rc == 0
   register: installed_golang_version
 
-- include: install-go.yml
+- include_tasks: install-go.yml
   when: golang_check.rc != 0 or installed_golang_version.stdout.find('go version go' + golang_version) != 0
