--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- include: packages_{{ ansible_os_family }}.yml
+- include_tasks: packages_{{ ansible_os_family }}.yml
   tags: packages
 
 - name: global npm packages
