tmux: increase druation of message when panes are synchronized

--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -12,7 +12,7 @@ bind-key b choose-buffer -Z
 
 # toggle synchronization of all panes in the current window
 unbind-key = # the default binding for = is choose buffer; use it for synchronizing panes instead.
-bind-key = set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+bind-key = set-window-option synchronize-panes\; display-message -d 5 "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # The copy-mode-vi table is close to the Vim key bindings, but we can do better.
 # `tmux prefix + Escape` starts copy mode.
