base: tag XDG_CONFIG task
Add the conf tag to the task that creates the XDG_CONFIG directory so
that it will be run along with the tasks that depend on the XDG_CONFIG
directory.

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -4,6 +4,8 @@
     dest: "{{ ansible_env.HOME }}/.config"
     state: directory
     mode: 0750
+  tags:
+    - conf
 
 - name: Set pkg_arch
   set_fact:
