ensure homebrew bash is allowed for user shells

--- a/roles/base/tasks/packages_Darwin.yml
+++ b/roles/base/tasks/packages_Darwin.yml
@@ -14,5 +14,12 @@
       - tmux
       - tree
       - vim
+      - bash
   tags:
     - packages
+
+- name: homebrew bash in /etc/shells
+  ansible.builtin.lineinfile:
+    path: /etc/shells
+    insertafter: "EOF"
+    line: "/opt/homebrew/bin/bash"
