--- a/roles/developer/tasks/packages_Debian.yml
+++ b/roles/developer/tasks/packages_Debian.yml
@@ -42,7 +42,8 @@
   apt:
     name:
       - python
-      - python-pip
+      - python3-pip
+      - python3-venv
       - git
   #   - git-lfs
       - mercurial
