--- a/home.yml
+++ b/home.yml
@@ -12,6 +12,7 @@ all:
         filecabinet:
       vars:
         ansible_python_interpreter: /usr/bin/python3
+        venv: "{{ ansible_env.HOME }}/venv"
     ham:
       hosts:
         hifi:
