--- a/roles/base/tasks/packages_Debian.yml
+++ b/roles/base/tasks/packages_Debian.yml
@@ -7,6 +7,8 @@
       - parallel
       - tree
       - vim
+      - python3-pip
+      - python3-venv
     state: latest
     update_cache: yes
     cache_valid_time: 86400
