--- a/host_vars/hifi/main.yml
+++ b/host_vars/hifi/main.yml
@@ -1,5 +1,5 @@
 ---
-usb_audio_device: "/devices/platform/soc/3f980000.usb/usb1/1-1/1-1.3/1-1.3:1.0/sound/card?"
+usb_audio_device: "/devices/platform/axi/1000120000.pcie/1f00200000.usb/xhci-hcd.0/usb1/1-1/1-1:1.0/sound/card?"
 pitft:
   display: "35r"
   rotation: "270"
