better parameterize igate templates
Better parameterize the igate template to use latitude and longitude in
decimal format so that the values can be reused in other places later,
because direwolf is inconsistent in that some fields can support
multiple formats while other fields can only support decimal; use
decimal to avoid avoid having to repeat the lat/long in multiple
representations.

Separate the call from the ssid so that the call can be used in other
places, too.

--- a/home.yml
+++ b/home.yml
@@ -19,9 +19,10 @@ all:
           igate:
             login: "{{ vault_igate_login }}"
             passcode: "{{ vault_igate_passcode }}"
-            call: K7BCX-10
-            lat: "45.568449N"
-            long: "122.670984W"
+            call: K7BCX
+            ssid: 10
+            lat_decimal: "45.568449"
+            long_decimal: "-122.670984"
             input_device: plughw:usb_audio,0
             output_device: plughw:usb_audio,0
     pitft:
