install awscli with brew instead of pip
The lastest awscli is expected to be installed with brew instead of pip.
Stop using pip for it.

--- a/roles/developer/tasks/packages_Darwin.yml
+++ b/roles/developer/tasks/packages_Darwin.yml
@@ -30,6 +30,7 @@
       - the_silver_searcher
       - hashicorp/tap/Packer
       - minikube
+      - awscli
     state: latest
   tags:
     - packages
