fix python3 handling
Set the virtual environment to $HOME/python-venv/primary for most
things.

Install gcloud with the default macOS python3.

--- a/roles/developer/tasks/install-gcloud.yml
+++ b/roles/developer/tasks/install-gcloud.yml
@@ -21,6 +21,7 @@
   shell: "{{ gcloud_install_path }}/google-cloud-sdk/install.sh --quiet"
   environment:
     PATH: "{{ gcloud_install_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
+    CLOUDSDK_PYTHON: /usr/bin/python3
   become: no
 
 - name: remove gcloud archive
