--- a/localhost.inv.yaml
+++ b/localhost.inv.yaml
@@ -5,4 +5,4 @@ all:
     localhost:
       ansible_connection: local
       ansible_python_interpreter: /usr/bin/python3
-      venv: "{{ ansible_env.HOME }}/python-venv/ansible"
+      venv: "{{ ansible_env.HOME }}/python-venv/primary"
