aprs-igate: parse direwolf stats and position packets
Parse direwolf stats and position packets. The direwolf stats will be
sent to the local telegraf instance to be forwarded to the dashboard.

--- a/host_vars/hifi/main.yml
+++ b/host_vars/hifi/main.yml
@@ -19,3 +19,7 @@ logforwarding:
     host: logs.k7bcx.com
     port: "443"
   shared_key: "{{ vault_igate_fluent_shared_key }}"
+metrics:
+  org: K7BCX-10
+  bucket: metrics
+  token: "{{ vault_igate_telegraf_token }}"
