--- a/roles/aprs-igate/files/fluent/igate-filter.conf
+++ b/roles/aprs-igate/files/fluent/igate-filter.conf
@@ -1,4 +1,45 @@
 [FILTER]
-  Name record_modifier
+	Name record_modifier
 	Match direwolf.log
 	Allowlist_key MESSAGE
+
+# Parse direwolf's IBEACON supplied statistics
+[FILTER]
+	Name rewrite_tag
+	Match direwolf.log
+	Rule $MESSAGE ^\[ig]\s[^>]+>[^[:space:]]+<IGATE, direwolf.stats true
+	#[ig] K7BCX-10>APDW17:<IGATE,MSG_CNT=0,PKT_CNT=0,DIR_CNT=0,LOC_CNT=2,RF_CNT=2,UPL_CNT=290,DNL_CNT=93
+
+[FILTER]
+	Name rewrite_tag
+	Match direwolf.log
+	Rule $MESSAGE ^\[\d\.\d]\s[A-Z0-9-]+>[A-Z0-9-]+,?[^:]+:[!=]\d{4}\.\d{2}[NS].\d{5}\.\d{2}[EW]. direwolf.pos true
+
+[FILTER]
+	Name rewrite_tag
+	Match direwolf.log
+	Rule $MESSAGE ^\[\d\.\d]\s[A-Z0-9-]+>[A-Z0-9-]+,?[^:]+:[/@]\d{6}[zh/]\d{4}\.\d{2}[NS].\d{5}\.\d{2}[EW]. direwolf.timestamp.pos true
+
+[FILTER]
+	Name parser
+	Match direwolf.stats
+	Parser direwolf-stats
+	Key_Name MESSAGE
+	Preserve_Key false
+	Reserve_Data false
+
+[FILTER]
+	Name parser
+	Match direwolf.pos
+	Parser direwolf-pos
+	Key_Name MESSAGE
+	Preserve_Key false
+	Reserve_Data false
+
+[FILTER]
+	Name parser
+	Match direwolf.timestamp.pos
+	Parser direwolf-timestamp-pos
+	Key_Name MESSAGE
+	Preserve_Key false
+	Reserve_Data false
