aprs-igate: configure telegraf

--- a/host_vars/hifi/main.yml
+++ b/host_vars/hifi/main.yml
@@ -20,6 +20,7 @@ logforwarding:
     port: "443"
   shared_key: "{{ vault_igate_fluent_shared_key }}"
 metrics:
+  host: metrics.k7bcx.com
   org: K7BCX-10
   bucket: metrics
   token: "{{ vault_igate_telegraf_token }}"
