--- a/roles/aprs-igate/handlers/main.yml
+++ b/roles/aprs-igate/handlers/main.yml
@@ -27,3 +27,15 @@
     name: fluent-bit
     state: restarted
   become: yes
+
+- name: restart telegraf
+  systemd:
+    name: telegraf
+    state: restarted
+  become: yes
+
+- name: reload telegraf
+  systemd:
+    name: telegraf
+    state: reloaded
+  become: yes
