radio: make direwolf installation optional
Add a tag to the direwolf include task so it can be easily skipped.

Parameterize the version of direwolf that's installed.

--- a/roles/radio/tasks/direwolf.yml
+++ b/roles/radio/tasks/direwolf.yml
@@ -34,7 +34,7 @@
   register: direwolf_git_result
 
 - name: checkout direwolf sources
-  shell: git checkout master
+  shell: git checkout {{ direwolf_version }}
   args:
     chdir: "{{ ansible_env.HOME }}/src/direwolf"
 
