aprs-igate: configure direwolf to create csv log
Add LOGFILE directive to direwolf configuration to cause it to create
the csv log file that telegraf expects.

--- a/roles/aprs-igate/tasks/igate.yml
+++ b/roles/aprs-igate/tasks/igate.yml
@@ -30,3 +30,10 @@
     - reload systemd
     - restart igate
   become: yes
+
+- name: create /var/log/direwolf
+  file:
+    dest: /var/log/direwolf
+    state: directory
+  become: yes
+  when: true
