aprs-igate: direwolf raw log handling
Include more systemd fields and some additional fields in direwolf's raw
logs before shipping to the log collector.

Only send one copy of direwolf's raw logs to the log collector.

--- a/roles/aprs-igate/files/fluent/igate-filter.conf
+++ b/roles/aprs-igate/files/fluent/igate-filter.conf
@@ -2,6 +2,10 @@
 	Name record_modifier
 	Match direwolf.log
 	Allowlist_key MESSAGE
+	Allowlist_key STREAM_ID
+	Allowlist_key SYSLOG_IDENTIFIER
+	Allowlist_key SYSTEMD_UNIT
+	Record host K7BCX-10
 
 # Parse direwolf's IBEACON supplied statistics
 [FILTER]
