aprs-igate: send custom beacon over radio
Send a custom beacon about the dashboard over the radio.

--- a/host_vars/hifi/main.yml
+++ b/host_vars/hifi/main.yml
@@ -14,6 +14,7 @@ igate:
   long_decimal: "-122.670984"
   input_device: plughw:usb_audio,0
   output_device: plughw:usb_audio,0
+  dashboard_url: http://dashboard.k7bcx.com
 logforwarding:
   collector:
     host: logs.k7bcx.com
