aprs-igate: create dedicated user and group
Create a dedicated user and group to run direwolf.

--- a/roles/aprs-igate/files/igate.service
+++ b/roles/aprs-igate/files/igate.service
@@ -6,6 +6,9 @@ StandardInput=null
 StandardOutput=journal+console
 StandardError=journal
 
+User=igate
+Group=igate
+
 ExecStart=direwolf -c /etc/aprs/igate.conf -r 24000 -D 1 -t 0
 
 KillMode=process
