--- a/roles/aprs-igate/files/sdr-igate.service
+++ b/roles/aprs-igate/files/sdr-igate.service
@@ -11,6 +11,9 @@ StandardInput=null
 StandardOutput=journal
 StandardError=journal
 
+User=igate
+Group=igate
+
 ExecStart=direwolf -c /etc/aprs/sdr-igate.conf -r 24000 -D 1 -t 0 -
 
 KillMode=process
