--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -8,7 +8,7 @@
 #    state: latest
 #    virtualenv: "{{ venv }}"
 #    virtualenv_command: "python3 -m venv"
-#  with_items:
+#  loop:
 #  tags:
 #    - packages
 #    - python
