--- a/roles/developer/tasks/git.yml
+++ b/roles/developer/tasks/git.yml
@@ -88,19 +88,16 @@
 # (see: https://stackoverflow.com/questions/15935624/how-do-i-avoid-empty-sections-when-removing-a-setting-from-git-config)
 #- name: keep url section
 #  command: git config --global "url.{{ item.base }}.placeholder" placeholder
-#  with_items: "{{ insteadOfs }}"
+#  loop: "{{ insteadOfs }}"
 #
 - name: remove insteadOf values
   command: git config unset --global --all "url.{{ item.base }}.insteadOf"
-  with_items: "{{ insteadOfs }}"
+  loop: "{{ insteadOfs }}"
   when: item.base is defined
 
 - name: git config insteadOf
   command: git config --global --add url.{{ item.0.base }}.insteadOf "{{ item.1 }}"
-  with_subelements:
-    - "{{ insteadOfs }}"
-    - urls
-    - skip_missing: yes
+  loop: "{{ insteadOfs | subelements('urls', skip_missing=True) }}"
 
 - name: git config web.browser
   command: git config --global web.browser open
@@ -125,7 +122,7 @@
 
 # TODO(bc): replace include with include_tasks in Ansible 2.4
 - include_tasks: git-workspace.yml
-  with_items: "{{ workspaces }}"
+  loop: "{{ workspaces }}"
   when: workspaces | default([], true)
   loop_control:
     loop_var: workspace
