--- a/roles/developer/tasks/packages_Darwin.yml
+++ b/roles/developer/tasks/packages_Darwin.yml
@@ -36,7 +36,7 @@
   tags:
     - packages
 
-- name: install packages
+- name: install maybe managed casks
   homebrew_cask:
     name:
       - docker
